  * uscan: Correct the <base ...> regex to be case-insensitive.  (Closes:
    #495265)

  [ Christoph Berg ]
  * debsign: Fix debsign -r dir/*.changes, and do some QA on the manpage.
    Continue with next file if an already existing signature is kept.

  [ Mohammed Adnène Trojette ]
  * nmudiff: Use a friendlier template inspired from Lucas Nussbaum's
    patch. (Closes: #496628)
  * namecheck: New script by Steve Kemp included to check project names
    are not already taken. (Closes: #484271)
  * bts: document that the cache auto-cleaning is overzealous on noatime
    partitions. Patch from intrigeri <intrigeri@boum.org>. (Closes: #488486)

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sat, 30 Aug 2008 19:58:43 +0200

devscripts (2.10.35) unstable; urgency=low

  * checkbashisms: Only flag "local x y" and "local foo=bar" when --posix is
    used, as the use of the constructs is likely to become policy compliant
    in the near future (see Policy bug #473019)
  * debcommit: When --diff is used, don't open an editor to confirm commit
    messages
  * po4a/po/fr.po: Update French manpage translations; thanks Nicolas FRANCOIS
    (Closes: #491001)
  * who-uploads: Call "gpg --verify" with LC_ALL set to C to ensure that
    the output is in the expected format (Closes: #492474)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sat, 26 Jul 2008 21:57:20 +0100

devscripts (2.10.34) unstable; urgency=low

  * checkbashisms:
    + Match the use of "shell echo -n" and "if foo then echo -n"
    + Fix a thinko in the quoted-block detection (thankfully the effects were
      largely benign, unless one was attempting to check libtool...)
    + Fix false positives in the checks for "dirs", "popd", "pushd", "shopt"
      and "ulimit" and the "echo with unsafe backslash", brace expansion and
      invalid function name checks
    + Fix a false-positive in the "source script with arguments check"
    + Fix a false negative in the "function" check (Closes: #490223)